methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: not found: value True
                                 return True
                                        ^SlugTracking:11: error: reassignment to val
while (isOverBaggle=false) { if (isFacingTrail=true) {
                   ^SlugTracking:11: error: reassignment to val
while (isOverBaggle=false) { if (isFacingTrail=true) {
                                              ^