methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {forward();
                               if (getGroundColor()==Color.green) {
                                 backward();
                                 return True
                               } else {
                                 return false
                               }
 }

while (isOverBaggle=false) { if (isFacingTrail=true) {
  forward();
} else {
  right}
}
                            